# myProject

./: README.md  pyproject.toml
apiview/: apps.py  views.py
authenticate_permission/: apps.py  permissions.py  urls.py  views.py
database/: docker-compose.yml
drf_yasg_doc/: apps.py  urls.py  views.py
exception/: apps.py  exceptions.py  views.py
filter/: apps.py  authentication.py  views.py
generic/: serializers.py  urls.py  views.py
generic_viewset/: apps.py  serializers.py  views.py
mixin/: apps.py  views.py
mixin_generic/: apps.py  serializers.py  views.py
mixin_generic_viewset/: apps.py  serializers.py  urls.py  views.py
mixin_generic_viewset_router/: apps.py  serializers.py  urls.py  views.py
model_serializer/: serializers.py  urls.py  views.py
myProject/: settings.py  urls.py
pagination/: apps.py  views.py
req/: serializers.py  urls.py  views.py
school/: models.py  serializers.py  urls.py  views.py
school/migrations/: 0001_initial.py
serializer/: apps.py  readme.md  serializers.py  views.py
sers/: serializers.py  urls.py  views.py
students/: models.py  serializers.py  urls.py  views.py
students/migrations/: 0001_initial.py  0002_remove_student_sex_alter_student_classmate.py  0003_student_sex.py
throttle_test/: apps.py  urls.py  views.py
view/: apps.py  urls.py
viewset/: apps.py  serializers.py  urls.py  views.py
